--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-<body>
-  <h1> My link in bio</h1>
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+  </head>
+  <body>
+    <div class="headshot">
+      <img src="headshot.jpg" alt="headshot of a smiling woman"
+    </div>
+  </body>
+</html>
