--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
   <head>
     <meta charset="UTF-8">
   </head>
+  
   <body>
     <div class="headshot">
       <img src="headshot.jpg" alt="headshot of a smiling woman"
     </div>
+    
+    <div class="name-row">
+      <h1>Yarra Elmasry</h1>
+    </div>
+
+    <div class="socials"
+      <h2> I don't really use social media </h2>
+    </div>
+
+    <div class="links-row"
+      <ul>
+        <li> My photography website </li>
+        <li> Support Memorial Sloan Kettering </li>
+        <li> One of my favourite cookbooks </li>
+      </ul>
+    </div>
+  
+  
   </body>
-</html>
+
+  </html>
