--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="socials"
-      <h2> I don't really use social media </h2>
+      <h2><a href="https://www.instagram.com/yarraelmasry/?hl=en" target="_blank">Instagram</a> </h2>
     </div>
 
     <div class="links-row"
