--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <h1>Yarra Elmasry</h1>
       </div>
 
-      <div class="socials"
-        <h3><a href="https://www.instagram.com/yarraelmasry/?hl=en"> Instagram </a> </h3>
-        <h3><a href="https://x.com/yae293"> Twitter </a></h3>
-        <h3><a href="https://www.linkedin.com/in/yarra-elmasry-1b48ab169/"> LinkedIn </a></h3>
+      <div class="socials">
+        <a href="https://www.linkedin.com/in/yarra-elmasry-1b48ab169/"> LinkedIn </a>
+        <a href="https://www.instagram.com/yarraelmasry/?hl=en"> Instagram </a>
+        <a href="https://x.com/yae293"> Twitter </a>
       </div>
 
-      <div class="links-row"
+      <div class="links-row">
         <div class="item"> 
           <a href="https://www.yarraelmasry.com"> My photography website </a>
         </div>
