--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="main-container">
       <div class="headshot">
-        <img src="headshot.jpg" alt="headshot of a smiling woman"
+        <img src="images/headshot.jpg" alt="headshot of a smiling woman"
       </div>
       
       <div class="name-row">
@@ -22,14 +22,17 @@
 
       <div class="links-row">
         <div class="item"> 
+          <img src="images/yarra.png" alt="yarra elmasry spelt out"
           <a href="https://www.yarraelmasry.com"> My photography website </a>
         </div>
         
         <div class="item"> 
+          <img src="images/msk.png" alt="logo of msk"
           <a href="https://www.mskcc.org/"> Support Memorial Sloan Kettering </a>
         </div>
 
         <div class="item"> 
+          <img src="images/aleppo.png" alt="cover of cookbook with pomegranates on it">
           <a href="https://www.interlinkbooks.com/product/aleppo-cookbook-the/"> My favourite cookbook </a>
         </div>   <! --  links-row -->
       </div> <! --  main container -->
