--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
       }
 
       .item {
+        background-color: rgba(39, 245, 168, 0.8);
         margin-bottom: 20px; 
         display: flex; 
         align-items: center; 
+        border-radius: 1000px; 
+        padding: 5px; 
+        padding-right: 48px; 
+        box-shadow: 4px 4px 10px 0px rgba(32, 35, 122, 0.5);
       }
 
       .link-text {
@@ -86,9 +91,9 @@
       </div>
 
       <div class="socials">
-        <a href="https://www.linkedin.com/in/yarra-elmasry-1b48ab169/" target="_blank"> LinkedIn <i class="fa-brands fa-linkedin"></i> </a>
-        <a href="https://www.instagram.com/yarraelmasry/?hl=en" target="_blank"> Instagram <i class="fa-brands fa-instagram"></i> </a>
-        <a href="https://x.com/yae293" target="_blank"> Twitter <i class="fa-brands fa-twitter"></i> </a>
+        <a href="https://www.linkedin.com/in/yarra-elmasry-1b48ab169/" target="_blank"> <i class="fa-brands fa-linkedin"></i> </a>
+        <a href="https://www.instagram.com/yarraelmasry/?hl=en" target="_blank"> <i class="fa-brands fa-instagram"></i> </a>
+        <a href="https://x.com/yae293" target="_blank"> <i class="fa-brands fa-twitter"></i> </a> 
       </div>
 
       
